高老师修改

--- a/main.tex
+++ b/main.tex
@@ -94,10 +94,12 @@ Adversarial attack \cite{9169672} to image classification is first investigated 
 \textit{Untargeted Attacks v.s. Targeted Attacks\uline{.}} In the case of untargeted attacks, the adversary's goal is to cause the network to predict any incorrect label and whatever the incorrect label is does not matter, \eg, pushing the object location estimation just outside the true search region in visual tracking. Targeted attacks, however, aim to change the network's prediction to some specific target label. In visual tracking, the targeted attacks aim to intentionally drive trackers to output specified object locations following a predefined trajectory.
 \vspace{-2mm}
 
-\subsection{Adversarial Attacks in Visual Tracking}
-Recently, there are several explorations of the adversarial attacks to the visual tracking task. For example, PAT \cite{PAT} generates physical adversarial textures via white-box attacks to steer the tracker to lock on the texture when a tracked object moves in front of it. However, PAT validates its method by attacking a light deep regression tracker GOTURN \cite{GOTURN}, which has low tracking accuracy on modern benchmarks. In this paper, we aim to attack state-of-the-art Siamese trackers. RTAA \cite{RTAA} takes temporal motion into consideration when generating lightweight perturbations over the estimated tracking results frame-by-frame. However, RTAA only performs the untargeted attacks \uline{to} trackers, which is less challenging than the targeted attacks in this paper, as we aim to create arbitrary, complex trajectories at test time. 
+\subsection{Adversarial Attacks in Visual Tracking} \label{attacktracker}
+Recently, there are several explorations of the adversarial attacks to the visual tracking task. For example, PAT \cite{PAT} generates physical adversarial textures via white-box attacks to steer the tracker to lock on the texture when a tracked object moves in front of it. However, PAT validates its method by attacking a light deep regression tracker GOTURN \cite{GOTURN}, which has low tracking accuracy on modern benchmarks. In this paper, we aim to attack state-of-the-art Siamese trackers. RTAA \cite{RTAA} takes temporal motion into consideration when generating lightweight perturbations over the estimated tracking results frame-by-frame. \uline{CSA \cite{CSA} is a Siamese tracking attack method called cooling-shrinking attack. CSA can suppress the peak region of the heat map reflecting the target location, which is used to attack the tracker's targeting ability. However, both of these two methods only perform} the untargeted attacks \uline{to} trackers, which is less challenging than the targeted attacks in this paper, as we aim to create arbitrary, complex trajectories at test time. 
 
-Targeted attacks to follow an erroneous path which looks realistic are crucial to deceive the real-world tracking \uline{systems} without raising possible suspicion. SPARK \cite{SPARK} computes incremental perturbations by using information from the past frames to perform targeted attacks \uline{to} Siamese trackers. However, SPARK needs to generate distinct adversarial examples for every search image through heavy iterative schemes, which is time-consuming to attack online tracking in real time. The recent real-time attacker TTP \cite{TTP} exclusively uses the template image to generate \uline{the} temporally-transferable perturbation in a one-shot manner, and then adds it to every search image. However, this method still needs to generate \uline{the perturbation} for each individual video, and its targeted attack setting requires diverse perturbations from several runs of network inference. It is ill-suited to attack a real-world online-tracking system when we can not get access to the limited computational resources. In this paper, however, we propose video-agnostic perturbations which allow perturbing a novel video to come at no additional cost except the mere addition operations.
+Targeted attacks to follow an erroneous path which looks realistic are crucial to deceive the real-world tracking \uline{systems} without raising possible suspicion. SPARK \cite{SPARK} computes incremental perturbations by using information from the past frames to perform targeted attacks \uline{to} Siamese trackers. However, SPARK needs to generate distinct adversarial examples for every search image through heavy iterative schemes, which is time-consuming to attack online tracking in real time. \uline{FAN~\cite{FAN} proposes a fast attack network for attacking SiamFC tracker. To perform untargeted attacks, FAN proposes a drift loss that shifts the tracker's prediction of the target's position. The tracking error accumulates over time until the tracker loses the target completely. To perform targeted attacks, FAN proposes embedding feature loss for increasing the similarity between the features of the adversarial sample and the regions specified by a particular trajectory. However, similar to CSA, FAN also requires running a generative network for each frame to obtain adversarial information, making it difficult to meet the demand for real-time tracking.} The recent real-time attacker TTP \cite{TTP} exclusively uses the template image to generate \uline{a single} temporally-transferable perturbation in a one-shot manner, and then adds it to every search image of the video. However, this method still needs to generate \uline{the perturbation} for each individual video, and its targeted attack setting requires diverse perturbations from several runs of network inference. It is ill-suited to attack a real-world online-tracking system when we can not get access to the limited computational resources. In this paper, however, we propose video-agnostic perturbations which allow perturbing a novel video to come at no additional cost except the mere addition operations.
+
+%\uline{We firstly compare our attack method with the recent state-of-the-art attack methods, including CSA \cite{CSA}, RTAA \cite{RTAA}, SPARK \cite{SPARK}, FAN \cite{FAN} and TTP \cite{TTP}, with respect to the untargeted attack result (Table \ref{tab:SOTA}) and targeted attack result (Table \ref{tab:SOTA1}) on OTB2015. SPARK \cite{SPARK} reduces the precision score with respect to the real trajectory from 0.851 to 0.064. However, SPARK needs to generate distinct adversarial examples for every search image through heavy iterative schemes, which is time-consuming to attack online-tracking in real time. RTAA \cite{RTAA} reduces the precision score with respect to the real trajectory from 0.880 to 0.050. However, RTAA only performs the untargeted attacks for trackers, which is less challenging than the targeted attacks in this paper, as we aim to create arbitrary, complex trajectories at test time. CSA \cite{CSA} is a Siamese tracking attack method called cooling-shrinking attack. CSA can suppress the peak region of the heat map reflecting the target location, which is used to attack the tracker's targeting ability. However, this method requires running a generative network for each frame to obtain adversarial information, making it difficult to meet the demand for real-time tracking. CSA reduces the precision score with respect to the real trajectory from 0.851 to 0.458. Recently, Liang \textit{et al.} \cite{FAN} propose a fast attack network (FAN) for attacking SiamFC tracker. To perform untargeted attacks, FAN proposes a drift loss that shifts the tracker's prediction of the target's position. The tracking error accumulates over time until the tracker loses the target completely. To perform targeted attacks, FAN proposes embedding feature loss for increasing the similarity between the features of the adversarial sample and the features of regions specified by a particular trajectory. FAN can reduce the precision score with respect to the real trajectory from 0.720 to 0.180. However, the precision score with respect to the \textit{fake trajectory} is only 0.420. Similar to CSA, FAN also requires running a generative network for each frame to obtain adversarial information. Nakka \textit{et al.} \cite{TTP} propose the temporally transferable perturbations (TTP) for attacking the SiamRPN++ tracker. TTP generates a single adversarial perturbation from the template image and adds this perturbation to each search image of the video. TTP reduces the precision score with respect to the real trajectory from 0.910 to 0.080, which is effective for untargeted attacks. However, the precision score with respect to the \textit{fake trajectory} is only 0.692, which demonstrates that TTP's performance of targeted attacks is limited. In addition, this method needs to run a generative network for each video to obtain adversarial information, and thus requires the computational and storage resources of the real-world object tracking platform, which makes it difficult to deploy the method to resource-constrained platforms. Our method can reduce the precision score with respect to the real trajectory from 0.861 to 0.092. The precision score with respect to the \textit{fake trajectory} is up to 0.795, which is significantly better than other methods.}
 
 % 方法
 \section{Method}\label{method}
@@ -453,7 +455,7 @@ We also examine the influence of the number of training iterations on the percep
   \vspace{-4mm}
 \end{figure}
 
-We further compare our method with FAN \cite{FAN} to examine the perceptibility. FAN generates independent perturbation for each frame, while our perturbations are universal. FAN calculates the average SSIM value of all search images for each dataset, and \textit{the SSIM for their perturbed search image is calculated in the whole area of the search image}. As shown in Fig. \ref{fig:vis_fan}, both FAN and our method can perform targeted \uline{attacks}. Although FAN has its average SSIM value for OTB2015 dataset to only decrease to 0.92, its \uline{perturbations are} also a little noticeable for some video sequences as shown in Fig. \ref{fig:a1}. Note that Fig. \ref{fig:a1} is directly borrowed from their paper as the original perturbation results are not available. Moreover, our universal perturbations achieve better targeted attack performance than FAN on OTB2015, \ie, we achieve a precision score of 0.795, compared to 0.420 for FAN.
+We further compare our method with FAN \cite{FAN} to examine the perceptibility. FAN \uline{independently generates different perturbations} for each frame, while our perturbations are universal. FAN calculates the average SSIM value of all search images for each dataset, and \textit{the SSIM for their perturbed search image is calculated in the whole area of the search image}. As shown in Fig. \ref{fig:vis_fan}, both FAN and our method can perform targeted \uline{attacks}. Although FAN has its average SSIM value for OTB2015 dataset to only decrease to 0.92, its \uline{perturbations are} also a little noticeable for some video sequences as shown in Fig. \ref{fig:a1}. Note that Fig. \ref{fig:a1} is directly borrowed from their paper as the original perturbation results are not available. Moreover, our universal perturbations achieve better targeted attack performance than FAN on OTB2015 \uline{as shown in Sec.~\ref{SOTA}}.
 
 We note that it is important to make the size of the adversarial patch get small to avoid possible suspicion. So we experimentally examine the influence of the adversarial patch size in Fig. \ref{fig:patch_size_table}. We compare three different sizes of the adversarial patch, \ie, 64$\times$64, 32$\times$32 and 16$\times$16, to conduct this experiment. We evaluate the AO score of SiamFC++ on the perturbed GOT-Val dataset using these three different patch sizes.
 As shown in \uline{Fig.} \ref{fig:patch_size_table}, the 32$\times$32 patch can make the AO score decrease to 0.146 dramatically and its area only accounts for 1\% of the search image area.
@@ -554,8 +556,6 @@ Since we can only achieve a balance between the attack efficiency and the pertur
   \label{tab:loss}
 \end{table}
 
-\textit{Attack Performance w/o \uline{Ground-truth} Information.} Our perturbations are trained using datasets with \uline{ground-truth} box information. However, we may only know the video content while the \uline{ground-truth} box information is not available in practice. In case of this scenario, we can first run the tracker that needs to be attacked on these videos and generate one prediction result for each frame. The predicted boxes can be considered as \uline{ground-truth} information for training the perturbations. To verify this, we run the off-the-shelf SiamFC++ tracker on videos in GOT-10k training set. The predicted bounding boxes are used to train our perturbations. As shown in Table \ref{tab:agent_GT}, it is effective to use the predicted boxes instead of \uline{ground-truth} boxes for training our perturbations, though the targeted attack performance is affected due to some ambiguous prediction results used for training.
-
 \begin{table}[t]
   \centering
   \caption{Attack results on OTB2015, GOT-Val and LaSOT with or without the \uline{ground-truth} information.}
@@ -574,6 +574,8 @@ Since we can only achieve a balance between the attack efficiency and the pertur
   \label{tab:agent_GT}
 \end{table}
 
+\textit{Attack Performance w/o \uline{Ground-truth} Information.} Our perturbations are trained using datasets with \uline{ground-truth} box information. However, we may only know the video content while the \uline{ground-truth} box information is not available in practice. In case of this scenario, we can first run the tracker that needs to be attacked on these videos and generate one prediction result for each frame. The predicted boxes can be considered as \uline{ground-truth} information for training the perturbations. To verify this, we run the off-the-shelf SiamFC++ tracker on videos in GOT-10k training set. The predicted bounding boxes are used to train our perturbations. As shown in Table \ref{tab:agent_GT}, it is effective to use the predicted boxes instead of \uline{ground-truth} boxes for training our perturbations, though the targeted attack performance is affected due to some ambiguous prediction results used for training.
+
 \begin{table}[t]
   \centering
   \caption{Influence of two different ways to generate the fake trajectory: following a fixed direction in each video and following the real trajectory. It is evaluated on GOT-Val.}
@@ -587,14 +589,7 @@ Since we can only achieve a balance between the attack efficiency and the pertur
   \vspace{-3mm}
   \label{table:direction}
 \end{table}
-\textit{An Alternative Way to Generate Fake Trajectory.} Besides the strategy to generate the \textit{fake trajectory} following the real trajectory in Sec.~\ref{setup}, we also consider an alternative way to generate the \textit{fake trajectory}. Specifically, the attacker forces the tracker to follow a fixed direction in each video. For \uline{each video}, we assign a random direction from 4 different directions, each of which consists of shifting the box away by $(\pm 3, \pm 3)$ pixels for each consecutive frame, corresponding to one of the four directions $45^{\circ}, -45^{\circ}, 135^{\circ}, -135^{\circ}$. The attack performance is evaluated on GOT-Val. As shown in Table \ref{table:direction}, our attack method achieves effective attacks under both of the two different \uline{\textit{fake trajectory}} generation ways.
-\vspace{-3mm}
 
-\subsection{Transferability Analyses}
-
-In this part, we analyze the transferability of our proposed attack method. Specifically, we directly apply our perturbations trained on SiamFC++\_GoogleNet to other tracking networks including SiamFC++\_ShuffleNet, SiamFC++\_AlexNet, SiamRPN, SiamRPN++ and Ocean.
-
-%%%%%%%% 不同backbone的可迁移性 %%%%%%%%
 \begin{table}[t]
   \centering
   \caption{Transferability to different backbones of our perturbations trained on SiamFC++\_GoogleNet. It is evaluated on GOT-Val.}
@@ -611,10 +606,6 @@ In this part, we analyze the transferability of our proposed attack method. Spec
   \end{tabular}
   \label{tab:backbone}
 \end{table}
-\textit{Transferability to Different Backbones.} We evaluate the transferability of our attacks when applying the perturbations to two more different backbones of SiamFC++, \ie, ShuffleNet \cite{ShuffleNet} and AlexNet \cite{AlexNet}.
-The experimental results are shown in Table \ref{tab:backbone}. In the case of SiamFC++\_AlexNet, the AO with respect to the real trajectory decreases from 0.72 to 0.496. Our perturbations also generalize well to SiamFC++\_ShuffleNet, despite the customized components such as pointwise group convolution and channel shuffle operation in ShuffleNet.
-
-%%%%%%%% 不同跟踪器的可迁移性 %%%%%%%%
 \begin{table}[t]
   \centering
   \caption{Transferability to different tracking architectures of our perturbations trained on SiamFC++\_GoogleNet. It is evaluated on OTB2015.}
@@ -631,7 +622,33 @@ The experimental results are shown in Table \ref{tab:backbone}. In the case of S
   \vspace{-3mm}
   \label{tab:arch}
 \end{table}
-\textit{Transferability to Different Tracking Architectures.} We also evaluate the transferability of our attacks when applying the perturbations to three more state-of-the-art trackers: SiamRPN \cite{SiamRPN}, SiamRPN++ \cite{SiamRPN++} and Ocean \cite{zhang2020ocean}. SiamRPN and SiamRPN++ are anchor-based trackers, and Ocean is an anchor-free tracker. The experimental results are shown in Table \ref{tab:arch}. In the case of SiamRPN, the AO with respect to the real trajectory decreases from 0.666 to 0.483 and the performance of SiamRPN++ is decreased from 0.676 to 0.418. In the case of Ocean, the AO with respect to the real trajectory decreases from 0.902 to 0.282. The results show good transferability of our attacks to different tracking architectures, even if the generated perturbations are applied to anchor-based trackers.
+
+\textit{An Alternative Way to Generate Fake Trajectory.} Besides the strategy to generate the \textit{fake trajectory} following the real trajectory in Sec.~\ref{setup}, we also consider an alternative way to generate the \textit{fake trajectory}. Specifically, the attacker forces the tracker to follow a fixed direction in each video. For \uline{each video}, we assign a random direction from 4 different directions, each of which consists of shifting the box away by $(\pm 3, \pm 3)$ pixels for each consecutive frame, corresponding to one of the four directions $45^{\circ}, -45^{\circ}, 135^{\circ}, -135^{\circ}$. The attack performance is evaluated on GOT-Val. As shown in Table \ref{table:direction}, our attack method achieves effective attacks under both of the two different \uline{\textit{fake trajectory}} generation ways.
+\vspace{-3mm}
+
+\subsection{Transferability Analyses}
+
+In this part, we analyze the transferability of our proposed attack method. Specifically, we directly apply our perturbations trained on SiamFC++\_GoogleNet to other tracking networks including SiamFC++\_ShuffleNet, SiamFC++\_AlexNet, SiamRPN, SiamRPN++ and Ocean.
+
+\begin{table*}[t]
+  \centering
+  \caption{State-of-the-art comparison of untargeted attack performance on VOT2016/2018 in terms of accuracy, robustness and expected average overlap (EAO).}
+  \begin{tabular}{rrrcccccc}
+  \toprule
+  \multirow{2}{*}[-2pt]{Dataset} & \multirow{2}{*}[-2pt]{Method} & \multirow{2}{*}[-2pt]{Tracker} & \multicolumn{3}{c}{Before Attack} & \multicolumn{3}{c}{Untargeted Attack} \\ \cmidrule{4-9}
+                           &                         &                          & Accuracy   & Robustness  & EAO    & Accuracy    & Robustness    & EAO     \\ \midrule
+  \multirow{2}{*}{VOT2016} & RTAA                    & DaSiamRPN                & 0.625      & 0.224       & 0.439  & 0.521       & 1.613         & 0.078   \\
+                           & Ours                    & SiamFC++                 & 0.626      & 0.144       & 0.460  & 0.393       & 9.061         & 0.007   \\ \midrule
+  \multirow{5}{*}{VOT2018} & RTAA                    & DaSiamRPN                & 0.585      & 0.272       & 0.380  & 0.536       & 1.447         & 0.097   \\
+                           & FAN                     & SiamFC                   & 0.503      & 0.585       & 0.188  & 0.420       & -             & -       \\
+                           & CSA                     & SiamRPN                  & 0.570      & 0.440       & 0.261  & 0.430       & 1.900         & 0.076   \\
+                           & TTP                     & SiamRPN++                & 0.600      & 0.320       & 0.340  & 0.520       & 7.820         & 0.014   \\
+                           & Ours                    & SiamFC++                 & 0.587      & 0.183       & 0.426  & 0.342       & 8.981         & 0.007   \\ \bottomrule
+  \end{tabular}
+  \label{tab:sota_vot}
+  \vspace{-4mm}
+\end{table*}
+
 \vspace{-3mm}
 \begin{table}[t]
   \centering
@@ -666,28 +683,19 @@ The experimental results are shown in Table \ref{tab:backbone}. In the case of S
   \label{tab:SOTA1}
   \vspace{-3mm}
 \end{table}
-\begin{table*}[t]
-  \centering
-  \caption{State-of-the-art comparison of untargeted attack performance on VOT2016/2018 in terms of accuracy, robustness and expected average overlap (EAO).}
-  \begin{tabular}{rrrcccccc}
-  \toprule
-  \multirow{2}{*}[-2pt]{Dataset} & \multirow{2}{*}[-2pt]{Method} & \multirow{2}{*}[-2pt]{Tracker} & \multicolumn{3}{c}{Before Attack} & \multicolumn{3}{c}{Untargeted Attack} \\ \cmidrule{4-9}
-                           &                         &                          & Accuracy   & Robustness  & EAO    & Accuracy    & Robustness    & EAO     \\ \midrule
-  \multirow{2}{*}{VOT2016} & RTAA                    & DaSiamRPN                & 0.625      & 0.224       & 0.439  & 0.521       & 1.613         & 0.078   \\
-                           & Ours                    & SiamFC++                 & 0.626      & 0.144       & 0.460  & 0.393       & 9.061         & 0.007   \\ \midrule
-  \multirow{5}{*}{VOT2018} & RTAA                    & DaSiamRPN                & 0.585      & 0.272       & 0.380  & 0.536       & 1.447         & 0.097   \\
-                           & FAN                     & SiamFC                   & 0.503      & 0.585       & 0.188  & 0.420       & -             & -       \\
-                           & CSA                     & SiamRPN                  & 0.570      & 0.440       & 0.261  & 0.430       & 1.900         & 0.076   \\
-                           & TTP                     & SiamRPN++                & 0.600      & 0.320       & 0.340  & 0.520       & 7.820         & 0.014   \\
-                           & Ours                    & SiamFC++                 & 0.587      & 0.183       & 0.426  & 0.342       & 8.981         & 0.007   \\ \bottomrule
-  \end{tabular}
-  \label{tab:sota_vot}
-  \vspace{-4mm}
-\end{table*}
 
-\subsection{Comparison with Other Attack Methods}
+%%%%%%%% 不同backbone的可迁移性 %%%%%%%%
 
-We firstly compare our attack method with the recent state-of-the-art attack methods, including CSA \cite{CSA}, RTAA \cite{RTAA}, SPARK \cite{SPARK}, FAN \cite{FAN} and TTP \cite{TTP}, with respect to the untargeted attack result (Table \ref{tab:SOTA}) and targeted attack result (Table \ref{tab:SOTA1}) on OTB2015. SPARK \cite{SPARK} reduces the precision score with respect to the real trajectory from 0.851 to 0.064. However, SPARK needs to generate distinct adversarial examples for every search image through heavy iterative schemes, which is time-consuming to attack online-tracking in real time. RTAA \cite{RTAA} reduces the precision score with respect to the real trajectory from 0.880 to 0.050. However, RTAA only performs the untargeted attacks for trackers, which is less challenging than the targeted attacks in this paper, as we aim to create arbitrary, complex trajectories at test time. CSA \cite{CSA} is a Siamese tracking attack method called cooling-shrinking attack. CSA can suppress the peak region of the heat map reflecting the target location, which is used to attack the tracker's targeting ability. However, this method requires running a generative network for each frame to obtain adversarial information, making it difficult to meet the demand for real-time tracking. CSA reduces the precision score with respect to the real trajectory from 0.851 to 0.458. Recently, Liang \textit{et al.} \cite{FAN} propose a fast attack network (FAN) for attacking SiamFC tracker. To perform untargeted attacks, FAN proposes a drift loss that shifts the tracker's prediction of the target's position. The tracking error accumulates over time until the tracker loses the target completely. To perform targeted attacks, FAN proposes embedding feature loss for increasing the similarity between the features of the adversarial sample and the features of regions specified by a particular trajectory. FAN can reduce the precision score with respect to the real trajectory from 0.720 to 0.180. However, the precision score with respect to the \textit{fake trajectory} is only 0.420. Similar to CSA, FAN also requires running a generative network for each frame to obtain adversarial information. Nakka \textit{et al.} \cite{TTP} propose the temporally transferable perturbations (TTP) for attacking the SiamRPN++ tracker. TTP generates a single adversarial perturbation from the template image and adds this perturbation to each search image of the video. TTP reduces the precision score with respect to the real trajectory from 0.910 to 0.080, which is effective for untargeted attacks. However, the precision score with respect to the \textit{fake trajectory} is only 0.692, which demonstrates that TTP's performance of targeted attacks is limited. In addition, this method needs to run a generative network for each video to obtain adversarial information, and thus requires the computational and storage resources of the real-world object tracking platform, which makes it difficult to deploy the method to resource-constrained platforms. Our method can reduce the precision score with respect to the real trajectory from 0.861 to 0.092. The precision score with respect to the \textit{fake trajectory} is up to 0.795, which is significantly better than other methods.
+\textit{Transferability to Different Backbones.} We evaluate the transferability of our attacks when applying the perturbations to two more different backbones of SiamFC++, \ie, ShuffleNet \cite{ShuffleNet} and AlexNet \cite{AlexNet}.
+The experimental results are shown in Table \ref{tab:backbone}. In the case of SiamFC++\_AlexNet, the AO with respect to the real trajectory decreases from 0.72 to 0.496. Our perturbations also generalize well to SiamFC++\_ShuffleNet, despite the customized components such as pointwise group convolution and channel shuffle operation in ShuffleNet.
+
+%%%%%%%% 不同跟踪器的可迁移性 %%%%%%%%
+\textit{Transferability to Different Tracking Architectures.} We also evaluate the transferability of our attacks when applying the perturbations to three more state-of-the-art trackers: SiamRPN \cite{SiamRPN}, SiamRPN++ \cite{SiamRPN++} and Ocean \cite{zhang2020ocean}. SiamRPN and SiamRPN++ are anchor-based trackers, and Ocean is an anchor-free tracker. The experimental results are shown in Table \ref{tab:arch}. In the case of SiamRPN, the AO with respect to the real trajectory decreases from 0.666 to 0.483 and the performance of SiamRPN++ is decreased from 0.676 to 0.418. In the case of Ocean, the AO with respect to the real trajectory decreases from 0.902 to 0.282. The results show good transferability of our attacks to different tracking architectures, even if the generated perturbations are applied to anchor-based trackers.
+
+\subsection{Comparison with Other Attack Methods}\label{SOTA}
+
+We firstly compare our attack method with the recent state-of-the-art attack methods on OTB2015, including CSA \cite{CSA}, RTAA \cite{RTAA}, SPARK \cite{SPARK}, FAN \cite{FAN} and TTP \cite{TTP}. \uline{Please refer to Sec.~\ref{attacktracker} for more details about these methods. The untargeted attack results in Table \ref{tab:SOTA} show that our targeted attack method can also achieve superior untargeted attack performance as well as the RTAA, SPARK and TTP attack methods and even better results than CSA and FAN. What's more, the targeted attack results in Table \ref{tab:SOTA1} also show that our achieved precision score with respect to the \textit{fake trajectory} is up to 0.795, which is significantly better than FAN and TTP. This further demonstrates our superior targeted attack performance when using the adversarial patch for attacks.}
+%We firstly compare our attack method with the recent state-of-the-art attack methods, including CSA \cite{CSA}, RTAA \cite{RTAA}, SPARK \cite{SPARK}, FAN \cite{FAN} and TTP \cite{TTP}, with respect to the untargeted attack result (Table \ref{tab:SOTA}) and targeted attack result (Table \ref{tab:SOTA1}) on OTB2015. SPARK \cite{SPARK} reduces the precision score with respect to the real trajectory from 0.851 to 0.064. However, SPARK needs to generate distinct adversarial examples for every search image through heavy iterative schemes, which is time-consuming to attack online-tracking in real time. RTAA \cite{RTAA} reduces the precision score with respect to the real trajectory from 0.880 to 0.050. However, RTAA only performs the untargeted attacks for trackers, which is less challenging than the targeted attacks in this paper, as we aim to create arbitrary, complex trajectories at test time. CSA \cite{CSA} is a Siamese tracking attack method called cooling-shrinking attack. CSA can suppress the peak region of the heat map reflecting the target location, which is used to attack the tracker's targeting ability. However, this method requires running a generative network for each frame to obtain adversarial information, making it difficult to meet the demand for real-time tracking. CSA reduces the precision score with respect to the real trajectory from 0.851 to 0.458. Recently, Liang \textit{et al.} \cite{FAN} propose a fast attack network (FAN) for attacking SiamFC tracker. To perform untargeted attacks, FAN proposes a drift loss that shifts the tracker's prediction of the target's position. The tracking error accumulates over time until the tracker loses the target completely. To perform targeted attacks, FAN proposes embedding feature loss for increasing the similarity between the features of the adversarial sample and the features of regions specified by a particular trajectory. FAN can reduce the precision score with respect to the real trajectory from 0.720 to 0.180. However, the precision score with respect to the \textit{fake trajectory} is only 0.420. Similar to CSA, FAN also requires running a generative network for each frame to obtain adversarial information. Nakka \textit{et al.} \cite{TTP} propose the temporally transferable perturbations (TTP) for attacking the SiamRPN++ tracker. TTP generates a single adversarial perturbation from the template image and adds this perturbation to each search image of the video. TTP reduces the precision score with respect to the real trajectory from 0.910 to 0.080, which is effective for untargeted attacks. However, the precision score with respect to the \textit{fake trajectory} is only 0.692, which demonstrates that TTP's performance of targeted attacks is limited. In addition, this method needs to run a generative network for each video to obtain adversarial information, and thus requires the computational and storage resources of the real-world object tracking platform, which makes it difficult to deploy the method to resource-constrained platforms. Our method can reduce the precision score with respect to the real trajectory from 0.861 to 0.092. The precision score with respect to the \textit{fake trajectory} is up to 0.795, which is significantly better than other methods.
 
 We also compare our untargeted attack results on VOT2016 and VOT2018 with CSA \cite{CSA}, RTAA \cite{RTAA}, FAN \cite{FAN} and TTP \cite{TTP} in Table \ref{tab:sota_vot}. In summary, compared with other attack methods, our method has two key advantages. First, the proposed attack method only needs to perform the addition operations to deploy the adversarial information for any novel video without gradient optimization or network inference, making it possible to attack a real-world online-tracking system when we can not get access to the limited computational resources. Second, the proposed perturbations show good transferability to other anchor-free or anchor-based trackers. The main limitation of our work is that the translucent perturbations \uline{may} result in suspicious attacks.
 
