--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
 \title{A Simple and Strong Baseline for Universal Targeted Attacks on Siamese Visual Tracking}
 \author{
   Zhenbang Li, Yaya Shi, Jin Gao, Shaoru Wang,\\ Bing Li, Pengpeng Liang, Weiming Hu,~\IEEEmembership{Senior Member,~IEEE}
-  \thanks{This work is supported by National Key R\&D Program of China (No. 2018AAA0102802, No. 2018AAA0102803, No. 2018AAA0102800), Natural Science Foundation of China (Grant No. 61972394, 62036011, 61721004), the Key Research Program of Frontier Sciences, CAS, Grant No. QYZDJ-SSW-JSC040. Jin Gao and Bing Li are also supported in part by the Youth Innovation Promotion Association, CAS. \textit{(Corresponding author: Jin Gao.)}}
+  \thanks{This work is supported by National Key R\&D Program of China (No. 2018AAA0102802, No. 2018AAA0102803, No. 2018AAA0102800), Natural Science Foundation of China (Grant No. 61972394, 62036011, 61721004, 61906192), the Key Research Program of Frontier Sciences, CAS, Grant No. QYZDJ-SSW-JSC040, and the Science and Technology Service Network Initiative, CAS, Grant No. KFJ-STS-SCYD-317. Jin Gao and Bing Li are also supported in part by the Youth Innovation Promotion Association, CAS. \textit{(Corresponding author: Jin Gao.)}}
   
   \thanks{Z. Li, J. Gao, S. Wang and B. Li are with National Laboratory of Pattern Recognition, Institute of Automation, Chinese Academy of Sciences, Beijing, 100190, China, and also with School of Artificial Intelligence, University of Chinese Academy of Sciences, Beijing, 100190, China (e-mail: \{zhenbang.li, jin.gao, bli\}@nlpr.ia.ac.cn, wangshaoru2018@ia.ac.cn).}
   \thanks{Y. Shi is with University of Science and Technology of China, Anhui, 230026, China (e-mail: shiyaya@mail.ustc.edu.cn).}
