改参考文献

--- a/ref.bib
+++ b/ref.bib
@@ -430,8 +430,6 @@
   title={Is bert really robust? {A} strong baseline for natural language attack on text classification and entailment},
   author={Jin, Di and Jin, Zhijing and Zhou, Joey Tianyi and Szolovits, Peter},
   booktitle={Proc. Assoc. Adv. Artif. Intell.},
-  volume={34},
-  number={05},
   pages={8018--8025},
   year={2020}
 }
@@ -459,8 +457,6 @@
   title={Universal adversarial training},
   author={Shafahi, Ali and Najibi, Mahyar and Xu, Zheng and Dickerson, John and Davis, Larry S and Goldstein, Tom},
   booktitle={Proc. Assoc. Adv. Artif. Intell.},
-  volume={34},
-  number={04},
   pages={5636--5643},
   year={2020}
 }
@@ -530,10 +526,10 @@
   author={Jiang, Min and Zhao, Yuyao and Kong, Jun},
   journal={IEEE Trans. Circuits Syst. Video Technol.}, 
   title={Mutual Learning and Feature Fusion {Siamese} Networks for Visual Object Tracking}, 
-  year={2020},
-  volume={},
-  number={},
-  pages={1-1},
+  year={2021},
+  volume={31},
+  number={8},
+  pages={3154-3167},
   doi={10.1109/TCSVT.2020.3037947}}
 
 @ARTICLE{9169672,
@@ -596,17 +592,37 @@
 }
 @inproceedings{VOT2018,
   title={The sixth visual object tracking {VOT2018} challenge results},
-  author={Kristan, Matej and Leonardis, Ales and Matas, Jiri and Felsberg, Michael and Pflugfelder, Roman and ˇCehovin Zajc, Luka and Vojir, Tomas and Bhat, Goutam and Lukezic, Alan and Eldesokey, Abdelrahman and others},
+  author={Matej Kristan and
+          Ales Leonardis and
+          Jiri Matas and
+          Michael Felsberg and
+          Roman P. Pflugfelder and
+          Luka Cehovin Zajc and
+          Tom{\'{a}}s Voj{\'{\i}}r and
+          Goutam Bhat and
+          Alan Lukezic and
+          Abdelrahman Eldesokey and
+          others},
   booktitle={Proc. Eur. Conf. Comput. Vis. Workshops},
-  pages={0--0},
+  pages={3--53},
   year={2018}
 }
 
 @inproceedings{VOT2019,
   title={The seventh visual object tracking {VOT2019} challenge results},
-  author={Kristan, Matej and Matas, Jiri and Leonardis, Ales and Felsberg, Michael and Pflugfelder, Roman and Kamarainen, Joni-Kristian and ˇCehovin Zajc, Luka and Drbohlav, Ondrej and Lukezic, Alan and Berg, Amanda and others},
+  author={Matej Kristan and
+          Amanda Berg and
+          Linyu Zheng and
+          Litu Rout and
+          Luc Van Gool and
+          Luca Bertinetto and
+          Martin Danelljan and
+          Matteo Dunnhofer and
+          Meng Ni and
+          Min Young Kim and
+          others},
   booktitle={Proc. IEEE Int. Conf. Comput. Vis. Workshops},
-  pages={0--0},
+  pages={2206--2241},
   year={2019}
 }
 
@@ -679,10 +695,10 @@
   author={Jia, Shan and Li, Xin and Hu, Chuanbo and Guo, Guodong and Xu, Zhengquan},
   journal={IEEE Trans. Circuits Syst. Video Technol.}, 
   title={{3D} Face Anti-Spoofing with Factorized Bilinear Coding}, 
-  year={2020},
-  volume={},
-  number={},
-  pages={1-1},
+  year={2021},
+  volume={31},
+  number={10},
+  pages={4031-4045},
   doi={10.1109/TCSVT.2020.3044986}}
 
   @INPROCEEDINGS{9157720,
