--- a/ref.bib
+++ b/ref.bib
@@ -427,7 +427,7 @@
 }
 
 @inproceedings{jin2020bert,
-  title={Is bert really robust? {A} strong baseline for natural language attack on text classification and entailment},
+  title={Is {BERT} really robust? {A} strong baseline for natural language attack on text classification and entailment},
   author={Jin, Di and Jin, Zhijing and Zhou, Joey Tianyi and Szolovits, Peter},
   booktitle={Proc. Assoc. Adv. Artif. Intell.},
   pages={8018--8025},
