--- a/ref.bib
+++ b/ref.bib
@@ -427,7 +427,7 @@
 }
 
 @inproceedings{jin2020bert,
-  title={Is {BERT} really robust? {A} strong baseline for natural language attack on text classification and entailment},
+  title={\uline{Is {BERT} really robust? {A} strong baseline for natural language attack on text classification and entailment}},
   author={Jin, Di and Jin, Zhijing and Zhou, Joey Tianyi and Szolovits, Peter},
   booktitle={Proc. Assoc. Adv. Artif. Intell.},
   pages={8018--8025},
@@ -454,7 +454,7 @@
 }
 
 @inproceedings{shafahi2020universal,
-  title={Universal adversarial training},
+  title={\uline{Universal adversarial training}},
   author={Shafahi, Ali and Najibi, Mahyar and Xu, Zheng and Dickerson, John and Davis, Larry S and Goldstein, Tom},
   booktitle={Proc. Assoc. Adv. Artif. Intell.},
   pages={5636--5643},
@@ -525,7 +525,7 @@
 @ARTICLE{9258983,
   author={Jiang, Min and Zhao, Yuyao and Kong, Jun},
   journal={IEEE Trans. Circuits Syst. Video Technol.}, 
-  title={Mutual Learning and Feature Fusion {Siamese} Networks for Visual Object Tracking}, 
+  title={\uline{Mutual Learning and Feature Fusion {Siamese} Networks for Visual Object Tracking}},
   year={2021},
   volume={31},
   number={8},
@@ -591,25 +591,15 @@
   year      = {2016}
 }
 @inproceedings{VOT2018,
-  title={The sixth visual object tracking {VOT2018} challenge results},
-  author={Matej Kristan and
-          Ales Leonardis and
-          Jiri Matas and
-          Michael Felsberg and
-          Roman P. Pflugfelder and
-          Luka Cehovin Zajc and
-          Tom{\'{a}}s Voj{\'{\i}}r and
-          Goutam Bhat and
-          Alan Lukezic and
-          Abdelrahman Eldesokey and
-          others},
+  title={\uline{The sixth visual object tracking {VOT2018} challenge results}},
+  author={Matej Kristan and Ales Leonardis and Jiri Matas and Michael Felsberg and Roman P. Pflugfelder and Luka Cehovin Zajc and Tom{\'{a}}s Voj{\'{\i}}r and Goutam Bhat and Alan Lukezic and Abdelrahman Eldesokey and others},
   booktitle={Proc. Eur. Conf. Comput. Vis. Workshops},
   pages={3--53},
   year={2018}
 }
 
 @inproceedings{VOT2019,
-  title={The seventh visual object tracking {VOT2019} challenge results},
+  title={\uline{The seventh visual object tracking {VOT2019} challenge results}},
   author={Matej Kristan and
           Amanda Berg and
           Linyu Zheng and
@@ -694,7 +684,7 @@
 @ARTICLE{9294085,
   author={Jia, Shan and Li, Xin and Hu, Chuanbo and Guo, Guodong and Xu, Zhengquan},
   journal={IEEE Trans. Circuits Syst. Video Technol.}, 
-  title={{3D} Face Anti-Spoofing with Factorized Bilinear Coding}, 
+  title={\uline{{3D} Face Anti-Spoofing with Factorized Bilinear Coding}},
   year={2021},
   volume={31},
   number={10},
