--- a/main.tex
+++ b/main.tex
@@ -430,6 +430,26 @@ The tracker then takes $\tilde{\textbf z}_1=\textbf z_1+\delta$ and $\tilde{ \te
   \label{fig:patch_size_table}
   \vspace{-3mm}
 \end{figure}
+
+% 实验
+\section{Experiments}
+\subsection{Experimental Setup}\label{setup}
+\textit{Evaluation Benchmarks.} We evaluate our video-agnostic perturbation method for targeted attacks on several tracking benchmarks, \ie, OTB2015 \cite{OTB}, GOT-10k \cite{GOT-10k}, LaSOT \cite{LaSOT}, VOT2016 \cite{VOT2016}, VOT2018 \cite{VOT2018} and VOT2019 \cite{VOT2019}.
+Generally speaking, OTB2015 is a typical tracking benchmark which is widely used for evaluation for several years. GOT-10k has the advantage of magnitudes wider coverage of object classes. LaSOT has much longer video sequences with an average duration of 84 seconds. OTB2015, GOT-10k and LaSOT all follow the One-Pass Evaluation (OPE) protocol and their evaluation methodologies are similar as the measurement is mostly based on the success and precision of the trackers over the test videos. For instance, they all measure the success based on the fraction of frames in a sequence where the intersection-over-union (IoU) overlap of the predicted and \uline{ground-truth} rectangles exceeds a given threshold, and then the trackers are ranked using the area-under-the-curve (AUC) criterion. Since the average of IoU overlaps (AO) over all the test video frames is recently proved to be equivalent to the AUC criterion, we thus denote the success measurement as AO in the following. Besides AO, a success rate (SR) metric is also directly used to measure the percentage of successfully tracked frames given a threshold as in GOT-10k. As for the precision, it encodes the proportion of frames for which the center of the predicted rectangle is within 20 pixels of the \uline{ground-truth} center. Since the precision metric is sensitive to the resolution of the images and the size of the bounding boxes, a metric of normalized precision over the size of the \uline{ground-truth} bounding box is proposed and the trackers are then ranked using the AUC for normalized precision between 0 and 0.5. VOT \cite{VOT2016,VOT2018,VOT2019} introduces a series of tracking competitions with up to 60 sequences in each of them, aiming to evaluate the performance of a tracker in a relatively short duration. Different from other datasets, the VOT dataset has a reinitialization module. When the tracker loses the target (\ie, the overlap is zero between the predicted result and the annotation), the tracker will be reinitialized for the remaining frames based on the \uline{ground-truth} annotation. Three metrics are used to evaluate the performance of a tracker in VOT: (1) accuracy, (2) robustness and (3) EAO (expected average overlap). The accuracy measures how well the bounding box predicted by the tracker overlaps with the \uline{ground-truth} bounding box. The robustness measures how many times the tracker loses the target (fails) during tracking. EAO combines accuracy and robustness to evaluate the overall performance of the tracker. Characteristics of these datasets are summarized in Table \ref{tab:dataset}.
+
+\textit{Generating the Fake Trajectory.} We need to predefine a specific trajectory $B^{fake}=\{b^{fake}_i\}_1^{T}$ for each video to achieve targeted attack in the online-tracking phase, which we call the \textit{fake trajectory}. We denote the real trajectory as $B^{gt}=\{b^{gt}_i\}_1^T$ with the \uline{ground-truth} bounding boxes. It is possible to manually label arbitrary $B^{fake}$ for each video, however, it will be time-consuming in our experimental evaluation. So we generate $B^{fake}$ based on $B^{gt}$. Specifically, the \textit{fake trajectory} follows the real trajectory except that the adjacent boundaries of $b^{fake}_i$ and $b^{gt}_i$ are 2 pixels apart (Fig. \ref{fig:vis1}). Because the annotations of GOT-10k's test split are kept private, we choose to use its validation set for our targeted attack evaluation and denote it as GOT-Val. Note that the target position of the first frame is \uline{predefined} in the academic study of object tracking, while in practical \uline{applications}, the target position of the first frame is often obtained by running an object detector on this frame. In this scenario, once the target position of the first frame is obtained, we can put our adversarial patch near the target to mislead the tracker. In the remaining frames, we can specify an arbitrary \textit{fake trajectory} to place the adversarial patch.
+
+\textit{Image Quality Assessment.} We use structural similarity (SSIM) \cite{SSIM} to evaluate the quality and perceptibility of our generated perturbations $\delta$ and $p$. It is difficult to perceive the perturbation when SSIM is close to 1 (see Table \ref{tab:iter}).
+
+\subsection{Implementation Details}
+
+In our evaluation, the backbone Siamese network of our base tracker SiamFC++ \cite{SiamFC++} adopts GoogLeNet \cite{GoogLeNet}. We implement our approach in Pytorch and train our perturbations using three GTX 1080Ti GPUs. We adopt COCO \cite{COCO}, ILSVRC-VID \cite{VID} and the training splits of GOT-10k \cite{GOT-10k} and LaSOT \cite{LaSOT} as our training set. We train the perturbations for 8192 iterations with a mini-batch of 96 images (32 images per GPU). Both the hyper-parameters $\epsilon_1$ and $\epsilon_2$ for the template perturbation and the adversarial patch are set to 0.1. We generate training samples following the practice in SiamFC++. During both the training and online-tracking \uline{phases}, the off-the-shelf SiamFC++ tracking network model\footnote{It is exclusively trained on the training split of GOT-10k by the authors of SiamFC++ and can be downloaded from \url{https://drive.google.com/file/d/1BevcIEZr_kgyFjhxayOFw08DFl2u5Zi7/view}} is fixed and used
+\begin{figure}[t]
+  \centering
+  \includegraphics[width=0.48\textwidth]{images_imperceptible/random_gaussian.pdf}
+  \caption{Visualization of the manually generated similar random patterns.}
+  \label{fig:random}
+\end{figure}
 \begin{table}[t]
   \centering
   \caption{Comparison between attacking the different RGB and YCbCr color spaces. Attacking the YCbCr color space means we first convert \uline{one} search image into YCbCr color space, and then add a perturbation to the entire search image in the Y channel and a different perturbation to a very small region of $64 \times 64$ in the CbCr \uline{channels}. The attack performance is evaluated on GOT-Val.}
@@ -441,18 +461,11 @@ The tracker then takes $\tilde{\textbf z}_1=\textbf z_1+\delta$ and $\tilde{ \te
   RGB Attack                                             & 0.153                                   & 0.123                            & 0.840             & 0.890                & 0.56              & 0.79 \\
   YCbCr Attack                                           & 0.246                                   & 0.227                            & 0.682             & 0.756                & 0.78              & 0.79 \\ \bottomrule        
   \end{tabular}
+  \vspace{-10mm}
 \end{table}
-\begin{figure}[t]
+\begin{table}[ht]
   \centering
-  \includegraphics[width=0.48\textwidth]{images_imperceptible/1.pdf}
-  \caption{Visualization of the perturbations in attacking the different RGB and YCbCr color spaces. Note that the perturbation \uline{for} the search \uline{images} in the Y channel results in SSIM value of 0.95 outside the added patch area, which \uline{indicates good} imperceptibility.}
-  \label{fig:YCbCr}
-  \vspace{-3mm}
-\end{figure}
-\begin{table}[t]
-  \centering
-  \caption{Attack performance comparison using other random patterns.
-  It is evaluated on GOT-Val.}
+  \caption{Attack performance comparison using other random patterns. It is evaluated on GOT-Val.}
   \label{table:noise}
   \begin{tabular}{@{}rcccc@{}}
   \toprule
@@ -462,14 +475,12 @@ The tracker then takes $\tilde{\textbf z}_1=\textbf z_1+\delta$ and $\tilde{ \te
   Similar Pattern                                         & 0.736                                   & 0.871                            & 0.153             & 0.118               \\
   Gaussian Noise                                         & 0.740                                   & 0.875                            & 0.144             & 0.101               \\ \bottomrule
   \end{tabular}
-  \vspace{-3mm}
 \end{table}
 \begin{figure}[t]
   \centering
-  \includegraphics[width=0.48\textwidth]{images_imperceptible/random_gaussian.pdf}
-  \caption{Visualization of the manually generated similar random patterns.}
-  \label{fig:random}
-  \vspace{-3mm}
+  \includegraphics[width=0.48\textwidth]{images_imperceptible/1.pdf}
+  \caption{Visualization of the perturbations in attacking the different RGB and YCbCr color spaces. Note that the perturbation \uline{for} the search \uline{images} in the Y channel results in SSIM value of 0.95 outside the added patch area, which \uline{indicates good} imperceptibility.}
+  \label{fig:YCbCr}
 \end{figure}
 \begin{table}[t]
   \centering
@@ -612,21 +623,9 @@ The tracker then takes $\tilde{\textbf z}_1=\textbf z_1+\delta$ and $\tilde{ \te
   \end{tabular}
   \label{tab:sota_vot}
 \end{table*}
-% 实验
-\section{Experiments}
 
-\subsection{Experimental Setup}\label{setup}
-
-\textit{Evaluation Benchmarks.} We evaluate our video-agnostic perturbation method for targeted attacks on several tracking benchmarks, \ie, OTB2015 \cite{OTB}, GOT-10k \cite{GOT-10k}, LaSOT \cite{LaSOT}, VOT2016 \cite{VOT2016}, VOT2018 \cite{VOT2018} and VOT2019 \cite{VOT2019}.
-Generally speaking, OTB2015 is a typical tracking benchmark which is widely used for evaluation for several years. GOT-10k has the advantage of magnitudes wider coverage of object classes. LaSOT has much longer video sequences with an average duration of 84 seconds. OTB2015, GOT-10k and LaSOT all follow the One-Pass Evaluation (OPE) protocol and their evaluation methodologies are similar as the measurement is mostly based on the success and precision of the trackers over the test videos. For instance, they all measure the success based on the fraction of frames in a sequence where the intersection-over-union (IoU) overlap of the predicted and \uline{ground-truth} rectangles exceeds a given threshold, and then the trackers are ranked using the area-under-the-curve (AUC) criterion. Since the average of IoU overlaps (AO) over all the test video frames is recently proved to be equivalent to the AUC criterion, we thus denote the success measurement as AO in the following. Besides AO, a success rate (SR) metric is also directly used to measure the percentage of successfully tracked frames given a threshold as in GOT-10k. As for the precision, it encodes the proportion of frames for which the center of the predicted rectangle is within 20 pixels of the \uline{ground-truth} center. Since the precision metric is sensitive to the resolution of the images and the size of the bounding boxes, a metric of normalized precision over the size of the \uline{ground-truth} bounding box is proposed and the trackers are then ranked using the AUC for normalized precision between 0 and 0.5. VOT \cite{VOT2016,VOT2018,VOT2019} introduces a series of tracking competitions with up to 60 sequences in each of them, aiming to evaluate the performance of a tracker in a relatively short duration. Different from other datasets, the VOT dataset has a reinitialization module. When the tracker loses the target (\ie, the overlap is zero between the predicted result and the annotation), the tracker will be reinitialized for the remaining frames based on the \uline{ground-truth} annotation. Three metrics are used to evaluate the performance of a tracker in VOT: (1) accuracy, (2) robustness and (3) EAO (expected average overlap). The accuracy measures how well the bounding box predicted by the tracker overlaps with the \uline{ground-truth} bounding box. The robustness measures how many times the tracker loses the target (fails) during tracking. EAO combines accuracy and robustness to evaluate the overall performance of the tracker. Characteristics of these datasets are summarized in Table \ref{tab:dataset}.
-
-\textit{Generating the Fake Trajectory.} We need to predefine a specific trajectory $B^{fake}=\{b^{fake}_i\}_1^{T}$ for each video to achieve targeted attack in the online-tracking phase, which we call the \textit{fake trajectory}. We denote the real trajectory as $B^{gt}=\{b^{gt}_i\}_1^T$ with the \uline{ground-truth} bounding boxes. It is possible to manually label arbitrary $B^{fake}$ for each video, however, it will be time-consuming in our experimental evaluation. So we generate $B^{fake}$ based on $B^{gt}$. Specifically, the \textit{fake trajectory} follows the real trajectory except that the adjacent boundaries of $b^{fake}_i$ and $b^{gt}_i$ are 2 pixels apart (Fig. \ref{fig:vis1}). Because the annotations of GOT-10k's test split are kept private, we choose to use its validation set for our targeted attack evaluation and denote it as GOT-Val. Note that the target position of the first frame is \uline{predefined} in the academic study of object tracking, while in practical \uline{applications}, the target position of the first frame is often obtained by running an object detector on this frame. In this scenario, once the target position of the first frame is obtained, we can put our adversarial patch near the target to mislead the tracker. In the remaining frames, we can specify an arbitrary \textit{fake trajectory} to place the adversarial patch.
-
-\textit{Image Quality Assessment.} We use structural similarity (SSIM) \cite{SSIM} to evaluate the quality and perceptibility of our generated perturbations $\delta$ and $p$. It is difficult to perceive the perturbation when SSIM is close to 1 (see Table \ref{tab:iter}).
-
-\subsection{Implementation Details}
-
-In our evaluation, the backbone Siamese network of our base tracker SiamFC++ \cite{SiamFC++} adopts GoogLeNet \cite{GoogLeNet}. We implement our approach in Pytorch and train our perturbations using three GTX 1080Ti GPUs. We adopt COCO \cite{COCO}, ILSVRC-VID \cite{VID} and the training splits of GOT-10k \cite{GOT-10k} and LaSOT \cite{LaSOT} as our training set. We train the perturbations for 8192 iterations with a mini-batch of 96 images (32 images per GPU). Both the hyper-parameters $\epsilon_1$ and $\epsilon_2$ for the template perturbation and the adversarial patch are set to 0.1. We generate training samples following the practice in SiamFC++. During both the training and online-tracking \uline{phases}, the off-the-shelf SiamFC++ tracking network model\footnote{It is exclusively trained on the training split of GOT-10k by the authors of SiamFC++ and can be downloaded from \url{https://drive.google.com/file/d/1BevcIEZr_kgyFjhxayOFw08DFl2u5Zi7/view}} is fixed and used for the whole evaluation, the spatial size of the template image is set to $127\times 127$, and the search image is $303\times 303$. In Eq.~\eqref{eq:loss}, we set $\alpha=1, \beta=1, \gamma=1, \eta_1=0.005$, and $\eta_2=0.005$.
+\noindent
+for the whole evaluation, the spatial size of the template image is set to $127\times 127$, and the search image is $303\times 303$. In Eq.~\eqref{eq:loss}, we set $\alpha=1, \beta=1, \gamma=1, \eta_1=0.005$, and $\eta_2=0.005$.
 
 \subsection{Overall Attack Results on the Evaluation Benchmarks}
 
