下划线版本的参考文献小写

--- a/ref.bib
+++ b/ref.bib
@@ -525,7 +525,7 @@
 @ARTICLE{9258983,
   author={Jiang, Min and Zhao, Yuyao and Kong, Jun},
   journal={IEEE Trans. Circuits Syst. Video Technol.}, 
-  title={\uline{Mutual Learning and Feature Fusion {Siamese} Networks for Visual Object Tracking}},
+  title={\uline{Mutual learning and feature fusion {Siamese} networks for visual object tracking}},
   year={2021},
   volume={31},
   number={8},
@@ -684,7 +684,7 @@
 @ARTICLE{9294085,
   author={Jia, Shan and Li, Xin and Hu, Chuanbo and Guo, Guodong and Xu, Zhengquan},
   journal={IEEE Trans. Circuits Syst. Video Technol.}, 
-  title={\uline{{3D} Face Anti-Spoofing with Factorized Bilinear Coding}},
+  title={\uline{{3D} face anti-spoofing with factorized bilinear coding}},
   year={2021},
   volume={31},
   number={10},
